# vllm-qwen35-tool-parser

./: README.md  pyproject.toml  qwen35_merged.jinja  qwen35_patched.jinja  vllm-122b-serve.sh
vllm_qwen35_tool_parser/: __init__.py  parser.py
